--- a/overlay/Frameworks/res/values/config.xml
+++ b/overlay/Frameworks/res/values/config.xml
@@ -34,4 +34,26 @@
 
     <!-- Indicates whether device has a power button fingerprint sensor. -->
     <bool name="config_is_powerbutton_fps" translatable="false">true</bool>
+
+    <!-- An array of arrays of side fingerprint sensor properties relative to each display.
+         Note: this value is temporary and is expected to be queried directly
+         from the HAL in the future. -->
+    <array name="config_sfps_sensor_props" translatable="false">
+        <item>@array/config_sfps_sensor_props_0</item>
+        <item>@array/config_sfps_sensor_props_1</item>
+    </array>
+
+    <array name="config_sfps_sensor_props_0" translatable="false">
+        <item>local:4630946220589295746</item>    <!-- displayId -->
+        <item>1914</item>                         <!-- sensorLocationX -->
+        <item>870</item>                          <!-- sensorLocationY -->
+        <item>200</item>                          <!-- sensorRadius -->
+    </array>
+
+    <array name="config_sfps_sensor_props_1" translatable="false">
+        <item>local:4630946220589295747</item>    <!-- displayId -->
+        <item>1080</item>                         <!-- sensorLocationX -->
+        <item>1025</item>                         <!-- sensorLocationY -->
+        <item>200</item>                          <!-- sensorRadius -->
+    </array>
 </resources>
