zizhan: overlay: Update deprecated screen power items
* screen.on -> screen.on.display0
* screen.full -> screen.full.display0

AOSP frameworks/base: 8ac63071a4e6da7e0740f5eb6c6753218efcfd3a

Change-Id: Iad50e6cb63368e2d71e6fa1dbb6997c0f95d321e

--- a/overlay/Frameworks/res/xml/power_profile.xml
+++ b/overlay/Frameworks/res/xml/power_profile.xml
@@ -7,11 +7,11 @@
     <item name="none">0</item>
 
     <!-- Additional power used when screen is turned on at minimum brightness -->
-    <item name="screen.on">120.52</item>
+    <item name="screen.on.display0">120.52</item>
 
     <!-- Additional power used when screen is at maximum brightness, compared to
          screen at minimum brightness -->
-    <item name="screen.full">657.14</item>
+    <item name="screen.full.display0">657.14</item>
     <array name="cpu.clusters.cores">
         <value>4</value>
         <value>3</value>
